--- a/app/src/alx_header.module.css
+++ b/app/src/alx_header.module.css
@@ -3,12 +3,10 @@
 .alxHeader {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(135deg, #003566, #002A4E);
+  background: linear-gradient(135deg, #021c35, #002A4E);
   padding: 0.4rem 1rem 0.5rem 0.5rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid #4e4800;
   margin: 0;
-  padding: 0;
+  padding: 20;
   box-sizing: border-box;
 }
 
@@ -16,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 4px;
 }
 
 .title {
