--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,33 +1,62 @@
-
-
-
 /* Light Mode Styles */
 body {
   background-color: white;
   color: black;
 }
 
-/* Conatins for all article-cards */
+/* Containers for all article-cards */
 .card-space {
-  margin-top: 1rem;
+  margin-top: 0.66rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
   display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1px;
+  grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+}
+
+@media (max-width: 840px) {
+  .card-space {
+    margin-right: 0rem;
+    margin-left: 0rem;
+  }
+}
+
+@media (min-width: 841px) {
+  .card-space {
+    margin-right: 4rem;
+    margin-left: 4rem;
+  }
 }
 
 .articles-card {
   background-color: #e9e9e9;
   padding-left: 1rem;
   padding-right: 0.6rem;
-  margin: 1rem;
+  padding-top: 0.1rem;
+  margin-left: 0.33rem;
+  margin-right: 0.33rem;
+  margin-top: 0rem;
+  margin-bottom: 0.66rem;
   border-left: 2px solid #41c241;
-  border-radius: 0.9rem;
+  border-radius: 0.2rem;
 }
 
 .article-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.article-footer a {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  background-color: #e9e9e9;
+  border-radius: 20px;
+  border: 1px solid #ffffff;
+  text-decoration: none;
+
 }
 
 /* Dark Mode Styles */
@@ -49,24 +78,58 @@ body {
 
 }
 
-/* Dark Mode Toggle Styles */
-.dark-mode-toggle {
+.dark-mode .article-footer a {
+  background-color: #26272bc3;
+  border: 1px solid #02b7ff;
+
+}
+
+/* Updated Footer Styles */
+.bottom_footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   position: fixed;
-  bottom: 3px;
-  right: 20px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid #433f3f;
+}
+
+/* Dark Mode Toggle Button Styles */
+.bottom_footer .dark-mode-toggle {
   background-color: rgba(0, 0, 0, 0.619);
-  padding: 6px 10px;
+  padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-  z-index: 1000; /* Ensure the toggle stays above other content */
 }
 
-.dark-mode-toggle:hover {
+.bottom_footer .dark-mode-toggle:hover {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.dark-mode-toggle span {
+.bottom_footer .dark-mode-toggle span {
   color: white;
   font-size: 14px;
+}
+
+/* Example Text Div Styles */
+/* TODO: Decide what data should be displayed here */
+.example-text-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.bottom_footer .example-text {
+  margin-top: -10px;
+  margin-bottom: -10px;
+  text-align: center;
 }
