About page using react-router-dom
FINALLY got the "about page working. We can now create different pages for user to click between.

- Added new packages and dependencies, "react-router-dom"  popular library for handling routing and navigation in React applications.

- Added.js and About.css
- Modified App.js for layout improvements.
- Adjusted header positioning and button styles.
- Added routing in routes.js.
- Made necessary changes to header.js and header.module.css.
- Fixed styling issues.
- Improved overall user experience and visual appeal.

--- a/app/src/header.module.css
+++ b/app/src/header.module.css
@@ -1,5 +1,4 @@
-/* CSS Modules automatically generate unique class names to avoid clashes between different components. */
-
+/* header.module.css */
 .alxHeader {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
@@ -44,4 +43,37 @@
   color: #ffffff;
   font-size: 0.7rem;
   margin: 0;
+}
+
+/* header.module.css */
+.alxHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Update aboutButton styles */
+.aboutButton {
+  background-color: #24763c;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  /* Add margin to push it to the right */
+  margin-left: 1rem;
+
+  /* Hover styles */
+  &:hover {
+    background-color: #0056b3;
+  }
+}
+
+.aboutButtonText {
+  color: #ffffff; /* White color */
+  /* You can add additional styles here if needed */
+}
+
+.aboutButton:focus {
+  outline: none;
 }
