--- a/app/src/header.module.css
+++ b/app/src/header.module.css
@@ -60,8 +60,14 @@
   text-decoration: none;
   border-radius: 4px;
   transition: background-color 0.3s;
-  /* Add margin to push it to the right */
-  margin-left: 1rem;
+  margin-right: 1rem; /* Add margin to push it to the right */
+  width: 50px; /* Add a fixed width */
+  height: 30px; /* Add a fixed height */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
 
   /* Hover styles */
   &:hover {
@@ -76,4 +82,24 @@
 
 .aboutButton:focus {
   outline: none;
+}
+
+/* Update the Discord button styles */
+.discord-button {
+  background-color: #7289DA; /* Discord blue color */
+  color: #ffffff; /* White text color */
+  padding: 10px 20px; /* Padding for the button */
+  cursor: pointer; /* Show pointer cursor on hover */
+  border-radius: 4px; /* Rounded corners */
+  margin-left: 10px; /* Adjust the margin as needed */
+}
+
+.discord-button:hover {
+  background-color: #677BC4; /* Darker blue color on hover */
+}
+
+
+/* Add margin to the About button to push it to the right */
+.aboutButtonMargin {
+  margin-right: 1rem;
 }
