--- a/app/src/About.css
+++ b/app/src/About.css
@@ -3,15 +3,17 @@
 .about-container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 30px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
   }
 
   h1 {
-    font-size: 28px;
+    font-size: 150%;
     margin-bottom: 20px;
+    color: #fff;
+    text-shadow: #0e1f30;
   }
 
   h2 {
@@ -26,3 +28,19 @@
   }
 
   /* Add more styles as needed for your specific design */
+
+
+.header{
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(135deg, #021c35, #002A4E);
+  padding: 0.4rem 1rem 0.5rem 0.5rem;
+  margin: 0;
+  padding: 20;
+  box-sizing: border-box;
+}
+
+.content{
+  padding: 1%;
+  margin: 1%;
+}
