rm text deco from links in header

--- a/app/src/components/Header/header.module.css
+++ b/app/src/components/Header/header.module.css
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+.alxHeader a {
+  text-decoration: none;
+}
+
 .headerContent {
   display: flex;
   justify-content: space-between;
