--- a/app/src/components/About/About.css
+++ b/app/src/components/About/About.css
@@ -1,13 +1,8 @@
 /* About.css */
 
-.srs-image {
-  display: block;
-  width: 50%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2rem;
-  margin-bottom: 10rem;
+.content{
+  padding: 1%;
+  margin: 1%;
 }
 
 .about-container {
@@ -37,20 +32,34 @@
     margin-bottom: 20px;
   }
 
-  /* Add more styles as needed for your specific design */
 
+/* Team */
 
-.header{
-  text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(135deg, #021c35, #002A4E);
-  padding: 0.4rem 1rem 0.5rem 0.5rem;
-  margin: 0;
-  padding: 20;
-  box-sizing: border-box;
+.Team {
+  display: flex;
+  background-color: #5c4527;
+  color: #ffffff
 }
 
-.content{
-  padding: 1%;
-  margin: 1%;
+.image-container {
+  flex: 1;
+}
+
+.srs-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.team-text {
+  flex: 2; /* Takes up 66% of the available width */
+  padding: 20px; /* Add spacing around the text */
+  font-size: 24px; /* Adjust font size as needed */
+  font-weight: bold; /* Make the text bold */
+}
+
+.center-container {
+  display: flex;
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
 }
