--- a/app/src/components/Footer/Footer.css
+++ b/app/src/components/Footer/Footer.css
@@ -13,6 +13,7 @@
     left: 0;
     right: 0;
     border-top: 1px solid #433f3f;
+    user-select: none;
   }
 
   /* Dark Mode Toggle Button Styles */
